Integrate time and space